# mlzoom-hw

./: .gitignore  README.md  requirements.txt
01-intro/: Homework.ipynb
02-regression/: homework.ipynb
03-classification/: homework.ipynb
04-evaluation/: homework.ipynb
05-deployment/: Dockerfile  homework.ipynb  predictapp.py  pyproject.toml
06-trees/: homework.ipynb
midterm-project/: Dockerfile  README.md  fly.toml  main.py  predict.py  project.ipynb  pyproject.toml  train.py
